# nomad-oasis-test

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  load_secrets.sh  pyproject.toml
.github/workflows/: docker-publish.yml
configs/: nginx.conf  nomad-realm.json  nomad.yaml
scripts/: load_secrets.sh
