[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
name = "nomad-distribution"
description = "nomad distribution template"
version = "0.1"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = ["nomad-lab[parsing, infrastructure]>=1.3.4"]

[project.optional-dependencies]
plugins = [
  "nomad-simulations>=0.1.2",
  "pynxtools[convert]==0.5.0",
  "nomad-schema-plugin-run>=1.0.1",
  "nomad-schema-plugin-simulation-workflow>=1.0.1",
  "nomad-normalizer-plugin-bandstructure>=1.0",
  "nomad-normalizer-plugin-dos>=1.0",
  "nomad-normalizer-plugin-soap>=1.0",
  "nomad-normalizer-plugin-spectra>=1.0",
  "nomad-normalizer-plugin-system>=1.0",
  "nomad-normalizer-plugin-simulation-workflow>=1.0",
  "nomad-parser-plugins-electronic>=1.0",
  "nomad-parser-plugins-atomistic>=1.0",
  "nomad-parser-plugins-workflow>=1.0",
  "nomad-parser-plugins-database>=1.0",
  "nomad-parser-magres @ git+https://github.com/CCP-NC/nomad-parser-magres.git@14c10ca8d132b44a861942cf97444d9765a9ba3b",
  #"nomad-parser-magres @ git+https://github.com/CCP-NC/nomad-parser-magres.git@7620d7bb0c29aeed9fdf203689ffe5aa6a0ce5bb", (electric field gradient extraction fixed)
  #"nomad-parser-magres @ git+https://github.com/CCP-NC/nomad-parser-magres.git@63b5a0cfa1c2b6f0686adab0a921629ab5016523", (last commit on develop branch)
]
jupyter = []
dev = ["nomad-lab[parsing, infrastructure, dev]>=1.3.4"]

[tool.uv]
extra-index-url = [
  "https://gitlab.mpcdf.mpg.de/api/v4/projects/2187/packages/pypi/simple",
]
constraint-dependencies = ["hyperspy>=1.7.6"]
prerelease = "disallow"

[tool.setuptools.packages.find]
exclude = ["gui*", "docs*", "config*"]
